--- a/.github/workflows/notion-sync.yml
+++ b/.github/workflows/notion-sync.yml
@@ -1,8 +1,8 @@
 name: Sync Notion to Markdown
 
 on:
-  schedule:
-    - cron: '0 * * * *'  # 每小時執行一次（你可以改成每天：0 0 * * *）
+  # schedule:
+  #   - cron: '0 * * * *'  # 每小時執行一次（你可以改成每天：0 0 * * *）
   workflow_dispatch:      # 手動觸發
 
 jobs:
